Fix scrollbars

--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@ body {
 	display: grid;
 	grid-template-columns: 300px 1fr;
 	grid-template-rows: 1fr;
-	width: 100vw;
-	height: 100vh;
 	align-content: stretch;
 	justify-content: stretch;
 }
